Hack Club Account -> Hack Club Auth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
       </div>
     </main>
     <footer class="flex items-center justify-center py-4 text-xs text-default-questions/50 mx-8">
-        <p>Made with <span class="text-pink-400" aria-hidden="true">❤</span> by Leo from <a href="https://hackclub.com" class="underline">Hack Club</a>. Powered by <a href="https://account.hackclub.com" class="underline">Hack Club Account</a>.</p>
+        <p>Made with <span class="text-pink-400" aria-hidden="true">❤</span> by Leo from <a href="https://hackclub.com" class="underline">Hack Club</a>. Powered by <a href="https://auth.hackclub.com" class="underline">Hack Club Auth</a>.</p>
     </footer>
   </body>
 </html>
