--- a/app/views/layouts/program.html.erb
+++ b/app/views/layouts/program.html.erb
@@ -49,7 +49,7 @@
       <%= yield %>
     </main>
     <footer class="flex items-center justify-center py-4 text-xs px-2 sm:px-8 bg-neutral-800 sm:bg-transparent <%= defined?(@program) ? (@program&.is_bg_secondary_dark? ? 'text-neutral-500' : 'text-neutral-900') : 'text-neutral-500' %>">
-        <p>Made with <span class="text-pink-400" aria-hidden="true">❤</span> by Leo from <a href="https://hackclub.com" class="underline">Hack Club</a>. Powered by <a href="https://account.hackclub.com" class="underline">Hack Club Account</a>.</p>
+        <p>Made with <span class="text-pink-400" aria-hidden="true">❤</span> by Leo from <a href="https://hackclub.com" class="underline">Hack Club</a>. Powered by <a href="https://auth.hackclub.com" class="underline">Hack Club Auth</a>.</p>
     </footer>
   </body>
 </html>
