--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -70,7 +70,7 @@
       </div>
     </main>
     <footer class="flex items-center justify-center py-2 md:py-4 text-xs text-default-questions/40 md:text-default-questions/50 mx-2 md:mx-8 w-full">
-      <p>Made with <span class="text-pink-400" aria-hidden="true">❤</span> by Leo from <a href="https://hackclub.com" class="underline">Hack Club</a>. Powered by <a href="https://account.hackclub.com" class="underline">Hack Club Account</a>.</p>
+      <p>Made with <span class="text-pink-400" aria-hidden="true">❤</span> by Leo from <a href="https://hackclub.com" class="underline">Hack Club</a>. Powered by <a href="https://auth.hackclub.com" class="underline">Hack Club Auth</a>.</p>
     </footer>
   </body>
 </html>
